--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -409,3 +409,31 @@ body {
 	padding: 0.75rem;
 	flex-shrink: 0;
 }
+
+.coffee-button {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  background-color: #ffdd00;
+  color: #000;
+  padding: 10px 10px;
+  border-radius: 8px;
+  font-weight: 600;
+  text-decoration: none;
+  font-family: sans-serif;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s ease-in-out;
+   position: fixed;
+    top: 16px;
+    right: 16px;
+}
+
+.coffee-button:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2);
+}
+
+.coffee-icon {
+  width: 24px;
+  height: 24px;
+}
